fixed wrong label position on iphone
Former-commit-id: dbb7653de7071b044d1ae3c0a0f7cf56621e6342

--- a/sys-src/frontend/src/app/components/charts/area-chart/area-chart.component.scss
+++ b/sys-src/frontend/src/app/components/charts/area-chart/area-chart.component.scss
@@ -22,6 +22,9 @@
     .horizontal-legend{
       white-space: normal;
     }
+    .legend-label-text{
+      overflow: unset !important;
+    }
   }
 }
 
